--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Sounds -->
     <audio src="sounds/pop.wav" id="pop"></audio>
-    <audio src="sounds/c2c.wav" id="c2c"></audio>
+    <audio src="sounds/c2c.mp3" id="c2c"></audio>
 
     <script src="assets/lib/dat-gui/build/dat.gui.min.js"></script>
     <script src="assets/lib/jquery/dist/jquery.min.js"></script>
