Remove controls, add volume icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <!-- Volume icon -->
+    <img src="images/volume.png" alt="Turn up the volume for a better experience" class="volume">
     <!-- Texts -->
     <div class="title">
         <h1 class="first">2D is Nice...</h1>
